MOB_360_2017_1a_V6/objects/EventLog__c.object
<CustomObject>
    <description>To track the user action</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application name</description>
        <label>Application</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Holds the Url</description>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>indicates which user can be tracked</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EventLog</label>
    <nameField>
        <displayFormat>EL{0000}</displayFormat>
        <label>Event Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EventLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>